gccida/c3/invalidate_from_clobbers
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_from_clobbers/src/cse.c:6874:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_from_clobbers/src/cse.c:6942:31: error: use of undeclared identifier 'machine_mode'
invalidate( v2->fld[0].rtx, ( machine_mode)BYTE2( v3)); 
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/invalidate_from_clobbers/src/obj/cse.o] Error 1
